test(estado): substitui new Long(...) deprecado por Long.valueOf(...)
Eliminava o único warning real de "uses or overrides a deprecated API"
que aparecia em Docker Publish/CodeQL/CI a cada build.